k8s/manifests/autoscaler-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: autoscaler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autoscaler
  template:
    metadata:
      labels:
        app: autoscaler
    spec:
      containers:
      - name: autoscaler
        image: autoscaler:latest
