k8s/manifests/services.yaml

apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30001

---
apiVersion: v1
kind: Service
metadata:
  name: predictor-svc
spec:
  type: ClusterIP
  selector:
    app: predictor
  ports:
    - port: 8000
      targetPort: 8000
